--- a/k8s-helm/tools-charts/jenkins-chart/values.yaml
+++ b/k8s-helm/tools-charts/jenkins-chart/values.yaml
@@ -529,7 +529,29 @@ jenkins:
       configUrls: []
       # - https://acme.org/jenkins.yaml
       # -- List of Jenkins Config as Code scripts
-      configScripts: {}
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
+      configScripts: 
+        agents: |
+          jenkins:
+            clouds:
+              - kubernetes:
+                  templates:
+                    - name: kaniko-agent
+                      label: kaniko
+                      containers:
+                        - name: kaniko
+                          image: gcr.io/kaniko-project/executor:latest
+                          command:
+                            - cat
+                          ttyEnabled: true
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
       #  welcome-message: |
       #    jenkins:
       #      systemMessage: Welcome to our CI\CD server. This Jenkins is configured and managed 'as code'.
