--- a/k8s-helm/tools-charts/jenkins-chart/values.yaml
+++ b/k8s-helm/tools-charts/jenkins-chart/values.yaml
@@ -534,20 +534,33 @@ jenkins:
       #############################################################################################################################
       #############################################################################################################################
       #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
       configScripts: 
         agents: |
           jenkins:
             clouds:
-              - kubernetes:
-                  templates:
-                    - name: kaniko-agent
-                      label: kaniko
-                      containers:
-                        - name: kaniko
-                          image: gcr.io/kaniko-project/executor:latest
-                          command:
-                            - cat
-                          ttyEnabled: true
+            - kubernetes:
+                name: "kubernetes"
+                templates:
+                - name: "kaniko"
+                  label: "kaniko"
+                  containers:
+                  - name: "kaniko"
+                    image: gcr.io/kaniko-project/executor:latest
+                    ttyEnabled: true
+                    workingDir: "/workspace"
+                  volumes:
+                  - secretVolume:
+                      secretName: "dockerhub-credentials"
+                      mountPath: "/kaniko/.docker"
+    
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
+      #############################################################################################################################
       #############################################################################################################################
       #############################################################################################################################
       #############################################################################################################################
