--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6.18.0
         with:
-          context: services/${{ matrix.service }}
+          context: src/services/${{ matrix.service }}
           push: true
           tags: |
             mohamedfawzi/${{ matrix.service }}:latest
