--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Trigger Deploy Workflow
         uses: peter-evans/repository-dispatch@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN_GITHUB }}
           event-type: deploy-microservice
           client-payload: '{"service": "${{ matrix.service }}", "tag": "latest"}'
 
